# colledge-book-rag-system

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
api/: main.py
api/routes/: ingest.py  query.py
api/schemas/: request.py  response.py
apps/: gradio_app.py  streamlit_app.py
configs/: default.yaml
eval/: metrics.py
eval/datasets/: sample_qa.json
scripts/: ingest.py  query.py
src/college_rag/: __init__.py  config.py  exceptions.py  models.py  pipeline.py
src/college_rag/chunking/: __init__.py  semantic_chunker.py
src/college_rag/embeddings/: __init__.py  embedder.py
src/college_rag/ingestion/: __init__.py  base.py  docx_extractor.py  factory.py  heading_utils.py  pdf_extractor.py
src/college_rag/retrieval/: __init__.py  retriever.py
src/ingestion/: chunker.py  embedder.py  indexer.py  pdf_loader.py  pdf_type_detector.py
src/pipeline/: ingest_pipeline.py  rag_pipeline.py
src/retrieval/: context_expander.py  retriever.py
src/utils/: config.py  job_store.py  logger.py  tokenizer.py
src/vectorstore/: base.py  chroma_store.py
tests/: conftest.py  test_chunking.py  test_config.py  test_embedder.py  test_ingestion.py  test_models.py  test_pipeline.py  test_retriever.py  test_vectorstore.py
tests/integration/: test_api.py  test_ingest_pipeline.py
tests/unit/: test_api.py  test_chroma_store.py  test_chunker.py  test_chunker_real_world.py  test_context_expander.py  test_embedder.py  test_job_store.py  test_pdf_loader.py  test_retriever.py  test_tokenizer.py
(+4 files in other folders)
